2.1.9 * Fixed do not wrap text in CSS3 vertical toggler * Save subscriber name in Mailchimp integration

--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -1,5 +1,5 @@
 /**
- * @version 2.1.5
+ * @version 2.1.9
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2016 Perfect Web sp. z o.o., All rights reserved. https://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -173,6 +173,7 @@ div.pweb-modal *,
  */
 .pweb-vertical-css .pweb-text {
 	display: inline-block;
+    white-space: nowrap;
 	writing-mode: vertical-lr;
 	-webkit-writing-mode: vertical-lr;
 	-ms-writing-mode: tb-rl;
